april 6 forgot password and profile

--- a/laundry/templates/base.html
+++ b/laundry/templates/base.html
@@ -58,6 +58,7 @@
                 {% else %}
                     <a href="{% url 'dashboard' %}">Dashboard</a>
                     <a href="{% url 'history' %}">History</a>
+                    <a href="{% url 'update_profile' %}">Update Profile</a>
                     <a href="{% url 'request_laundry' %}">Request Laundry</a>
                 {% endif %}
                 <a href="{% url 'logout' %}" style="color: #e74c3c;">Logout</a>
