--- a/laundry/templates/base.html
+++ b/laundry/templates/base.html
@@ -158,6 +158,9 @@
                                     <a class="nav-link" href="{% url 'add_laundry_item' %}">Manage Items</a>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'update_profile' %}">Profile</a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                                 </li>
                             {% endif %}
@@ -171,6 +174,9 @@
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'history' %}">History</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'update_profile' %}">Profile</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'logout' %}">Logout</a>
